# ircd-ratbox

./: .gitignore  .indent.pro  BUGS  CREDITS  ChangeLog  ChangeLog.1.bz2  INSTALL  Makefile.am  README.FIRST  RELNOTES  SVN-Access  aclocal.m4  compile  configure.ac  install-mod.sh.in  main.c
bandb/: Makefile.am  bandb.c  bantool.c  rsdb.h  rsdb_sqlite3.c
bandb/sqlite3/: Makefile.am
contrib/: Makefile.am  README  example_module.c  ircd-shortcut.pl  m_42.c  m_clearchan.c  m_flags.c  m_force.c  m_mkpasswd.c  m_ojoin.c  m_okick.c  m_olist.c  m_opme.c  m_webirc.c  spy_admin_notice.c  spy_info_notice.c  spy_links_notice.c  spy_motd_notice.c  spy_stats_notice.c  spy_stats_p_notice.c  spy_whois_notice.c  spy_whois_notice_global.c
doc/: CIDR.txt  Hybrid-team  Makefile.in  README.cidr_bans  challenge.txt  collision_fnc.txt  example.conf  example.efnet.conf  genssl.sh  hooks.txt  index.txt  ircd.motd  logfiles.txt  modeg.txt  modes.txt  monitor.txt  operguide.txt  server-version-info  services.txt  tgchange.txt  whats-new-2.0.txt  whats-new-2.1.txt  whats-new-2.2.txt  whats-new-3.0.txt
doc/technical/: cluster.txt  event.txt  fd-management.txt  file-management.txt  hostmask.txt  index.txt  linebuf.txt  network.txt  send.txt  ts6.txt
help/: Makefile.am
help/opers/: admindline  adminkline  adminresv  adminwall  adminxline  cmode  dline  gungline  index  invite  kline  masktrace  monitor  rehash  resv  stats  umode  unresv  wallops  who  xline
help/users/: stats  umode
include/: bandbi.h  blacklist.h  cache.h  channel.h  class.h  client.h  common.h  config.h  config.h.dist  defaults.h  dns.h  hash.h  hook.h  hostmask.h  http.h  http_parser.h  ircd.h  ircd_defs.h  ircd_getopt.h  ircd_signal.h  listener.h  match.h  messages.h  modules.h  monitor.h  newconf.h  numeric.h  packet.h  parse.h  patchlevel.h  reject.h  restart.h  s_auth.h  s_conf.h  s_gline.h  s_log.h  s_newconf.h  s_serv.h  s_stats.h  s_user.h  (+10 more)
libltdl/: aclocal.m4  configure
libratbox/: ChangeLog  acinclude.m4  aclocal.m4  configure  configure.ac
libratbox/include/: arc4random.h  commio-int.h  libratbox_config.h.in  ratbox_lib.h  rb_commio.h  rb_helper.h  rb_tools.h
libratbox/src/: Makefile.am  balloc.c  commio.c  devpoll.c  epoll.c  event.c  export-syms.txt  gnutls.c  kqueue.c  linebuf.c  openssl.c  ratbox_lib.c  snprintf.c  unix.c
m4/: ratbox-file.m4  sqlite3.m4
modules/: Makefile.am  m_accept.c  m_admin.c  m_adminwall.c  m_away.c  m_cap.c  m_capab.c  m_close.c  m_cmessage.c  m_connect.c  m_dline.c  m_encap.c  m_gline.c  m_gungline.c  m_help.c  m_info.c  m_invite.c  m_ison.c  m_kline.c  m_knock.c  m_links.c  m_list.c  m_locops.c  m_lusers.c  m_map.c  m_monitor.c  m_motd.c  m_names.c  m_oper.c  m_operspy.c  m_pass.c  m_ping.c  m_pong.c  m_post.c  m_rehash.c  m_restart.c  m_resv.c  m_services.c  m_set.c  m_stats.c  (+18 more)
modules/core/: m_die.c  m_error.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_squit.c
resolver/: Makefile.am  getaddrinfo.c  getaddrinfo.h  getnameinfo.c  getnameinfo.h  res.c  res.h  reslib.c  reslib.h  reslist.c  resolver.c
src/: .indent.pro  Makefile.am  bandbi.c  blacklist.c  cache.c  channel.c  class.c  client.c  dns.c  getopt.c  hash.c  hook.c  hostmask.c  http.c  ircd.c  ircd_lexer.c  ircd_lexer.l  ircd_parser.c  ircd_parser.h  ircd_parser.y  ircd_signal.c  listener.c  match.c  modules.c  monitor.c  newconf.c  operhash.c  packet.c  parse.c  reject.c  restart.c  s_auth.c  s_conf.c  s_log.c  s_newconf.c  s_serv.c  s_user.c  scache.c  send.c  sslproc.c  (+4 more)
ssld/: Makefile.am  ssld.c
tools/: Makefile.am  README  README.mkpasswd  ircd_crontab.sh.in
